# pacfinder

./: .gitignore  Makefile.am  NEWS  README.md  RELEASE.md  autogen.sh  configure.ac
data/: .gitignore  Makefile.am
data/desktop/: Makefile.am  com.stevenbenner.pacfinder.desktop.in
data/gsettings/: Makefile.am  com.stevenbenner.pacfinder.gschema.xml
data/icons/: COPYING  Makefile.am
data/icons/scalable/: Makefile.am
data/resources/: Makefile.am  com.stevenbenner.pacfinder.gresource.xml
doc/: Makefile.am  pacfinder.1
po/: .gitignore  Makevars  POTFILES.in  README.md
src/: .gitignore  Makefile.am  aboutdialog.c  aboutdialog.h  database.c  database.h  interface.c  interface.h  main.c  main.h  settings.c  settings.h  util.c  util.h  window.c  window.h
test/: .gitignore  Makefile.am  main.c  test_util.c  test_util.h
